--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --mode=development --open",
+    "dev": "webpack-dev-server --mode=development",
     "build": "webpack --mode=production"
   },
   "keywords": [],
