--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "postcss-loader": "^7.0.1",
+    "postcss-preset-env": "^7.8.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
