--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -17,8 +17,8 @@ jobs:
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
           docker build -t resume-image  .
-          docker tag resume-image ${{ secrets.DOCKER_REPOSITORY }}
-          docker push ${{ secrets.DOCKER_REPOSITORY }}:latest
+          docker tag resume-image registry.cn-hangzhou.aliyuncs.com/pengliang/resume-image
+          docker push registry.cn-hangzhou.aliyuncs.com/pengliang/resume-image:latest
 
       - name: 登录服务器, 执行脚本
         uses: appleboy/ssh-action@master
@@ -29,6 +29,6 @@ jobs:
           script: |
             docker stop resume
             docker rm resume
-            docker rmi ${{ secrets.DOCKER_REPOSITORY }}:latest
-            docker pull ${{ secrets.DOCKER_REPOSITORY }}:latest
-            docker run --restart=always -d -p 10002:80 --name resume ${{ secrets.DOCKER_REPOSITORY }}:latest
+            docker rmi registry.cn-hangzhou.aliyuncs.com/pengliang/resume-image:latest
+            docker pull registry.cn-hangzhou.aliyuncs.com/pengliang/resume-image:latest
+            docker run --restart=always -d -p 10002:80 --name resume registry.cn-hangzhou.aliyuncs.com/pengliang/resume-image:latest
