--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -30,5 +30,6 @@ jobs:
             docker stop resume
             docker rm resume
             docker rmi registry.cn-hangzhou.aliyuncs.com/pengliang/resume-image:latest
+            docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
             docker pull registry.cn-hangzhou.aliyuncs.com/pengliang/resume-image:latest
             docker run --restart=always -d -p 10002:80 --name resume registry.cn-hangzhou.aliyuncs.com/pengliang/resume-image:latest
