--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -15,7 +15,7 @@ jobs:
           node-version: 14
       - name: 打包镜像, 上传 Docker Hub
         run: |
-          docker login --username=${{ secrets.DOCKER_USERNAME }} --password-stdin=${{ secrets.DOCKER_PASSWORD }}
+          docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }} registry.cn-hangzhou.aliyuncs.com
           docker build -t resume-image  .
           docker tag resume-image registry.cn-hangzhou.aliyuncs.com/pengliang/resume-image
           docker push registry.cn-hangzhou.aliyuncs.com/pengliang/resume-image:latest
@@ -30,6 +30,6 @@ jobs:
             docker stop resume
             docker rm resume
             docker rmi registry.cn-hangzhou.aliyuncs.com/pengliang/resume-image:latest
-            docker login --username=${{ secrets.DOCKER_USERNAME }} --password-stdin=${{ secrets.DOCKER_PASSWORD }}
+            docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }} registry.cn-hangzhou.aliyuncs.com
             docker pull registry.cn-hangzhou.aliyuncs.com/pengliang/resume-image:latest
             docker run --restart=always -d -p 10002:80 --name resume registry.cn-hangzhou.aliyuncs.com/pengliang/resume-image:latest
